src/test/fail/list_strings_no_comma.lly
#[
SyntaxError: Unexpected token 'a string'.
Where: File "test/fail/list_strings_no_comma.lly" at line 6
]#

var s = ["1" "2"]
